@@ -30,10 +30,35 @@ import javafx.collections.ObservableList;
 import javafx.concurrent.Task;
 import javafx.fxml.FXML;
 import javafx.fxml.Initializable;
-import javafx.scene.control.*;
+import javafx.scene.control.Alert;
 import javafx.scene.control.Alert.AlertType;
+import javafx.scene.control.Button;
+import javafx.scene.control.ButtonType;
+import javafx.scene.control.CheckBox;
+import javafx.scene.control.ComboBox;
+import javafx.scene.control.ContextMenu;
+import javafx.scene.control.ListCell;
+import javafx.scene.control.ListView;
+import javafx.scene.control.Menu;
+import javafx.scene.control.MenuItem;
+import javafx.scene.control.MultipleSelectionModel;
+import javafx.scene.control.ProgressIndicator;
+import javafx.scene.control.SelectionMode;
+import javafx.scene.control.SeparatorMenuItem;
+import javafx.scene.control.SplitPane;
+import javafx.scene.control.Tab;
+import javafx.scene.control.TabPane;
+import javafx.scene.control.TextInputDialog;
+import javafx.scene.control.Tooltip;
+import javafx.scene.control.TreeItem;
+import javafx.scene.control.TreeView;
 import javafx.scene.image.ImageView;
-import javafx.scene.input.*;
+import javafx.scene.input.Clipboard;
+import javafx.scene.input.ClipboardContent;
+import javafx.scene.input.ContextMenuEvent;
+import javafx.scene.input.KeyCode;
+import javafx.scene.input.KeyEvent;
+import javafx.scene.input.TransferMode;
 import javafx.scene.layout.VBox;
 import javafx.stage.FileChooser;
 import javafx.util.Callback;
@@ -41,26 +66,50 @@ import javafx.util.StringConverter;
 import org.phoebus.applications.saveandrestore.DirectoryUtilities;
 import org.phoebus.applications.saveandrestore.Messages;
 import org.phoebus.applications.saveandrestore.SaveAndRestoreApplication;
+import org.phoebus.applications.saveandrestore.actions.OpenFilterAction;
+import org.phoebus.applications.saveandrestore.actions.OpenNodeAction;
 import org.phoebus.applications.saveandrestore.filehandler.csv.CSVExporter;
 import org.phoebus.applications.saveandrestore.filehandler.csv.CSVImporter;
 import org.phoebus.applications.saveandrestore.model.Node;
 import org.phoebus.applications.saveandrestore.model.NodeType;
 import org.phoebus.applications.saveandrestore.model.Tag;
+import org.phoebus.applications.saveandrestore.model.TagData;
 import org.phoebus.applications.saveandrestore.model.search.Filter;
 import org.phoebus.applications.saveandrestore.model.search.SearchQueryUtil;
 import org.phoebus.applications.saveandrestore.model.search.SearchQueryUtil.Keys;
 import org.phoebus.applications.saveandrestore.model.search.SearchResult;
 import org.phoebus.applications.saveandrestore.ui.configuration.ConfigurationTab;
+import org.phoebus.applications.saveandrestore.ui.contextmenu.CompareSnapshotsMenuItem;
+import org.phoebus.applications.saveandrestore.ui.contextmenu.CopyMenuItem;
+import org.phoebus.applications.saveandrestore.ui.contextmenu.CopyUniqueIdToClipboardMenuItem;
+import org.phoebus.applications.saveandrestore.ui.contextmenu.CreateSnapshotMenuItem;
+import org.phoebus.applications.saveandrestore.ui.contextmenu.DeleteNodeMenuItem;
+import org.phoebus.applications.saveandrestore.ui.contextmenu.EditCompositeMenuItem;
+import org.phoebus.applications.saveandrestore.ui.contextmenu.ExportToCSVMenuItem;
+import org.phoebus.applications.saveandrestore.ui.contextmenu.ImportFromCSVMenuItem;
+import org.phoebus.applications.saveandrestore.ui.contextmenu.LoginMenuItem;
+import org.phoebus.applications.saveandrestore.ui.contextmenu.NewCompositeSnapshotMenuItem;
+import org.phoebus.applications.saveandrestore.ui.contextmenu.NewConfigurationMenuItem;
+import org.phoebus.applications.saveandrestore.ui.contextmenu.NewFolderMenuItem;
+import org.phoebus.applications.saveandrestore.ui.contextmenu.PasteMenuItem;
+import org.phoebus.applications.saveandrestore.ui.contextmenu.RenameFolderMenuItem;
+import org.phoebus.applications.saveandrestore.ui.contextmenu.TagGoldenMenuItem;
 import org.phoebus.applications.saveandrestore.ui.search.SearchAndFilterTab;
 import org.phoebus.applications.saveandrestore.ui.snapshot.CompositeSnapshotTab;
 import org.phoebus.applications.saveandrestore.ui.snapshot.SnapshotTab;
 import org.phoebus.applications.saveandrestore.ui.snapshot.tag.TagUtil;
+import org.phoebus.applications.saveandrestore.ui.snapshot.tag.TagWidget;
 import org.phoebus.framework.jobs.JobManager;
 import org.phoebus.framework.preferences.PhoebusPreferenceService;
+import org.phoebus.framework.selection.SelectionService;
+import org.phoebus.framework.workbench.ApplicationService;
+import org.phoebus.logbook.LogbookPreferences;
 import org.phoebus.security.tokens.ScopedAuthenticationToken;
+import org.phoebus.ui.application.ContextMenuService;
 import org.phoebus.ui.dialog.DialogHelper;
 import org.phoebus.ui.dialog.ExceptionDetailsErrorDialog;
 import org.phoebus.ui.javafx.ImageCache;
+import org.phoebus.ui.spi.ContextMenuEntry;
 
 import javax.ws.rs.core.MultivaluedHashMap;
 import javax.ws.rs.core.MultivaluedMap;
@@ -68,8 +117,21 @@ import java.io.File;
 import java.io.IOException;
 import java.net.URI;
 import java.net.URL;
+import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.text.MessageFormat;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.ResourceBundle;
+import java.util.Stack;
+import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.TimeUnit;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.stream.Collectors;
@@ -89,15 +151,19 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
     @FXML
     protected SplitPane splitPane;
 
+    @SuppressWarnings("unused")
     @FXML
     private ProgressIndicator progressIndicator;
 
+    @SuppressWarnings("unused")
     @FXML
     private ComboBox<Filter> filtersComboBox;
 
+    @SuppressWarnings("unused")
     @FXML
     private Button searchButton;
 
+    @SuppressWarnings("unused")
     @FXML
     private CheckBox enableFilterCheckBox;
 
@@ -111,7 +177,7 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
 
     private static final String FILTER_NAME = "filter_name";
 
-    protected static final Logger LOG = Logger.getLogger(SaveAndRestoreService.class.getName());
+    protected static final Logger LOG = Logger.getLogger(SaveAndRestoreController.class.getName());
 
     protected Comparator<TreeItem<Node>> treeNodeComparator;
 
@@ -119,8 +185,9 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
 
     private final SimpleBooleanProperty filterEnabledProperty = new SimpleBooleanProperty(false);
 
-    private final URI uri;
+    private static final Logger logger = Logger.getLogger(SaveAndRestoreController.class.getName());
 
+    @SuppressWarnings("unused")
     @FXML
     private Tooltip filterToolTip;
 
@@ -132,23 +199,25 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
 
     private final ObservableList<Filter> filtersList = FXCollections.observableArrayList();
 
-    /**
-     * @param uri If non-null, this is used to load a configuration or snapshot into the view.
-     */
-    public SaveAndRestoreController(URI uri) {
-        this.uri = uri;
-    }
+    private final CountDownLatch treeInitializationCountDownLatch = new CountDownLatch(1);
 
+    private final ContextMenu contextMenu = new ContextMenu();
+    private final Menu tagWithComment = new Menu(Messages.contextMenuTags, new ImageView(ImageCache.getImage(SaveAndRestoreController.class, "/icons/save-and-restore/snapshot-add_tag.png")));
+
+    private final SimpleBooleanProperty snapshotOrCompositeSnapshotOnlySelection = new SimpleBooleanProperty();
+
+    private final ObservableList<Node> selectedItemsProperty = FXCollections.observableArrayList();
 
     @Override
     public void initialize(URL url, ResourceBundle resourceBundle) {
 
-        // Tree items are first compared on type, then on name (case insensitive).
+        // Tree items are first compared on type, then on name (case-insensitive).
         treeNodeComparator = Comparator.comparing(TreeItem::getValue);
 
         saveAndRestoreService = SaveAndRestoreService.getInstance();
         treeView.getSelectionModel().setSelectionMode(SelectionMode.MULTIPLE);
         treeView.getStylesheets().add(getClass().getResource("/save-and-restore-style.css").toExternalForm());
+
         browserSelectionModel = treeView.getSelectionModel();
 
         ImageView searchButtonImageView = ImageCache.getImageView(SaveAndRestoreApplication.class, "/icons/sar-search.png");
@@ -239,8 +308,17 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
             treeView.getRoot().setValue(Node.builder().uniqueId(Node.ROOT_FOLDER_UNIQUE_ID).name(name).build());
         });
 
+        //JobManager.schedule("Configure context menu", monitor -> {
+        MenuItem addTagMenuItem = TagWidget.AddTagMenuItem();
+        addTagMenuItem.setOnAction(action -> addTagToSnapshots());
+        tagWithComment.getItems().addAll(addTagMenuItem);
+        //configureContextMenuItems();
+        treeView.setContextMenu(contextMenu);
+        //});
+
         loadTreeData();
     }
+
 
     /**
      * Loads the data for the tree root as provided (persisted) by the current
@@ -248,64 +326,43 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
      */
     public void loadTreeData() {
 
-        Task<TreeItem<Node>> loadRootNode = new Task<>() {
-            @Override
-            protected TreeItem<Node> call() {
-                Node rootNode = saveAndRestoreService.getRootNode();
-                TreeItem<Node> rootItem = createTreeItem(rootNode);
-                List<String> savedTreeViewStructure = getSavedTreeStructure();
-                // Check if there is a save tree structure. Also check that the first node id (=tree root)
-                // has the same unique id as the actual root node retrieved from the remote service. This check
-                // is needed to handle the case when the client connects to a different save-and-restore service.
-                if (savedTreeViewStructure != null && !savedTreeViewStructure.isEmpty() && savedTreeViewStructure.get(0).equals(rootNode.getUniqueId())) {
-                    HashMap<String, List<TreeItem<Node>>> childNodesMap = new HashMap<>();
-                    savedTreeViewStructure.forEach(s -> {
-                        List<Node> childNodes = saveAndRestoreService.getChildNodes(Node.builder().uniqueId(s).build());
-                        if (childNodes != null) { // This may be the case if the tree structure was modified externally
-                            List<TreeItem<Node>> childItems = childNodes.stream().map(n -> createTreeItem(n)).sorted(treeNodeComparator).collect(Collectors.toList());
-                            childNodesMap.put(s, childItems);
-                        }
-                    });
-                    setChildItems(childNodesMap, rootItem);
-                } else {
-                    List<Node> childNodes = saveAndRestoreService.getChildNodes(rootItem.getValue());
-                    List<TreeItem<Node>> childItems = childNodes.stream().map(n -> createTreeItem(n)).sorted(treeNodeComparator).collect(Collectors.toList());
-                    rootItem.getChildren().addAll(childItems);
-                }
-
-                return rootItem;
+        JobManager.schedule("Load save-and-restore tree data", monitor -> {
+            Node rootNode = saveAndRestoreService.getRootNode();
+            if (rootNode == null) { // Service off-line or not reachable
+                treeInitializationCountDownLatch.countDown();
+                errorPane.visibleProperty().set(true);
+                return;
+            }
+            TreeItem<Node> rootItem = createTreeItem(rootNode);
+            List<String> savedTreeViewStructure = getSavedTreeStructure();
+            // Check if there is a save tree structure. Also check that the first node id (=tree root)
+            // has the same unique id as the actual root node retrieved from the remote service. This check
+            // is needed to handle the case when the client connects to a different save-and-restore service.
+            if (savedTreeViewStructure != null && !savedTreeViewStructure.isEmpty() && savedTreeViewStructure.get(0).equals(rootNode.getUniqueId())) {
+                HashMap<String, List<TreeItem<Node>>> childNodesMap = new HashMap<>();
+                savedTreeViewStructure.forEach(s -> {
+                    List<Node> childNodes = saveAndRestoreService.getChildNodes(Node.builder().uniqueId(s).build());
+                    if (childNodes != null) { // This may be the case if the tree structure was modified externally
+                        List<TreeItem<Node>> childItems = childNodes.stream().map(this::createTreeItem).sorted(treeNodeComparator).collect(Collectors.toList());
+                        childNodesMap.put(s, childItems);
+                    }
+                });
+                setChildItems(childNodesMap, rootItem);
+            } else {
+                List<Node> childNodes = saveAndRestoreService.getChildNodes(rootItem.getValue());
+                List<TreeItem<Node>> childItems = childNodes.stream().map(this::createTreeItem).sorted(treeNodeComparator).toList();
+                rootItem.getChildren().addAll(childItems);
             }
 
-            /**
-             * Performs additional configuration/initialization when data has been loaded from
-             * the service.
-             */
-            @Override
-            public void succeeded() {
-                TreeItem<Node> rootItem = getValue();
+            Platform.runLater(() -> {
                 treeView.setRoot(rootItem);
                 expandNodes(treeView.getRoot());
-                // Open a resource (e.g. a snapshot node) if one is specified.
-                openResource(uri);
                 // Event handler for expanding nodes
                 treeView.getRoot().addEventHandler(TreeItem.<Node>branchExpandedEvent(), e -> expandTreeNode(e.getTreeItem()));
-                // Load all filters from service
-                loadFilters();
-                // Get saved filter and apply it if non-null, otherwise select "no filter"
-                String savedFilterName = getSavedFilterName();
-                if (savedFilterName != null) {
-                    Optional<Filter> f = filtersComboBox.getItems().stream().filter(filter -> filter.getName().equals(savedFilterName)).findFirst();
-                    f.ifPresent(filter -> filtersComboBox.getSelectionModel().select(filter));
-                }
-            }
-
-            @Override
-            public void failed() {
-                errorPane.visibleProperty().set(true);
-            }
-        };
-
-        new Thread(loadRootNode).start();
+                treeInitializationCountDownLatch.countDown();
+            });
+            loadFilters();
+        });
     }
 
     private List<String> getSavedTreeStructure() {
@@ -345,9 +402,9 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
      */
     protected void expandTreeNode(TreeItem<Node> targetItem) {
         List<Node> childNodes = saveAndRestoreService.getChildNodes(targetItem.getValue());
-        List<String> childNodeIds = childNodes.stream().map(Node::getUniqueId).collect(Collectors.toList());
+        List<String> childNodeIds = childNodes.stream().map(Node::getUniqueId).toList();
         List<String> existingNodeIds =
-                targetItem.getChildren().stream().map(item -> item.getValue().getUniqueId()).collect(Collectors.toList());
+                targetItem.getChildren().stream().map(item -> item.getValue().getUniqueId()).toList();
         List<TreeItem<Node>> itemsToAdd = new ArrayList<>();
         childNodes.forEach(n -> {
             if (!existingNodeIds.contains(n.getUniqueId())) {
@@ -368,19 +425,10 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
     }
 
     /**
-     * Action when user requests comparison between an opened snapshot and a snapshot item selected from
-     * the tree view.
+     * Action when user requests comparison between an opened snapshot and the selected {@link Node}.
      */
-    protected void compareSnapshot() {
-        compareSnapshot(browserSelectionModel.getSelectedItems().get(0).getValue());
-    }
-
-    /**
-     * Action when user requests comparison between an opened snapshot and the specifies snapshot {@link Node}
-     *
-     * @param node The snapshot used in the comparison.
-     */
-    protected void compareSnapshot(Node node) {
+    private void compareSnapshot() {
+        Node node = browserSelectionModel.getSelectedItems().get(0).getValue();
         Tab tab = tabPane.getSelectionModel().getSelectedItem();
         if (tab == null) {
             return;
@@ -398,17 +446,8 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
     /**
      * Deletes the tree items selected in the tree view.
      */
-    protected void deleteNodes() {
-        deleteNodes(browserSelectionModel.getSelectedItems());
-    }
-
-    /**
-     * Deletes the specified tree nodes from the tree view.
-     *
-     * @param selectedItems List of nodes to delete.
-     */
-    private void deleteNodes(ObservableList<TreeItem<Node>> selectedItems) {
-
+    private void deleteNodes() {
+        ObservableList<TreeItem<Node>> selectedItems = browserSelectionModel.getSelectedItems();
         Alert alert = new Alert(AlertType.CONFIRMATION);
         alert.setTitle(Messages.promptDeleteSelectedTitle);
         alert.setHeaderText(Messages.promptDeleteSelectedHeader);
@@ -461,7 +500,7 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
     /**
      * Opens a new snapshot view tab associated with the selected configuration.
      */
-    protected void openConfigurationForSnapshot() {
+    public void openConfigurationForSnapshot() {
         TreeItem<Node> treeItem = browserSelectionModel.getSelectedItems().get(0);
         SnapshotTab tab = new SnapshotTab(treeItem.getValue(), saveAndRestoreService);
         tab.newSnapshot(treeItem.getValue());
@@ -470,36 +509,43 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
         tabPane.getSelectionModel().select(tab);
     }
 
-    public void openSearchWindow() {
+    public SearchAndFilterTab openSearchWindow() {
         Optional<Tab> searchTabOptional = tabPane.getTabs().stream().filter(t -> t.getId() != null &&
                 t.getId().equals(SearchAndFilterTab.SEARCH_AND_FILTER_TAB_ID)).findFirst();
         if (searchTabOptional.isPresent()) {
             tabPane.getSelectionModel().select(searchTabOptional.get());
+            return (SearchAndFilterTab) searchTabOptional.get();
         } else {
             SearchAndFilterTab searchAndFilterTab = new SearchAndFilterTab(this);
             tabPane.getTabs().add(0, searchAndFilterTab);
             tabPane.getSelectionModel().select(searchAndFilterTab);
+            return searchAndFilterTab;
         }
+    }
+
+    /**
+     * Requests {@link SearchAndFilterTab} to open/select search and filter view to show the specified filter.
+     *
+     * @param filterId Unique, case-sensitive id of a save filter.
+     */
+    private void openSearchWindowForFilter(String filterId) {
+        Platform.runLater(() -> {
+            SearchAndFilterTab searchAndFilterTab = openSearchWindow();
+            searchAndFilterTab.showFilter(filterId);
+            tabPane.getSelectionModel().select(searchAndFilterTab);
+        });
     }
 
     /**
      * Creates a new folder {@link Node}.
      */
-    protected void createNewFolder() {
-        createNewFolder(browserSelectionModel.getSelectedItems().get(0));
-    }
-
-    /**
-     * Creates a new folder {@link Node} in the specified parent.
-     *
-     * @param parentTreeItem The tree node to which a new folder is added.
-     */
-    protected void createNewFolder(TreeItem<Node> parentTreeItem) {
+    private void createNewFolder() {
+        TreeItem<Node> parentTreeItem = browserSelectionModel.getSelectedItems().get(0);
         List<String> existingFolderNames =
                 parentTreeItem.getChildren().stream()
                         .filter(item -> item.getValue().getNodeType().equals(NodeType.FOLDER))
                         .map(item -> item.getValue().getName())
-                        .collect(Collectors.toList());
+                        .toList();
 
         TextInputDialog dialog = new TextInputDialog();
         dialog.setTitle(Messages.contextMenuNewFolder);
@@ -654,31 +700,16 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
     /**
      * Creates a new configuration in the selected tree node.
      */
-    protected void createNewConfiguration() {
+    public void createNewConfiguration() {
         launchTabForNewConfiguration(browserSelectionModel.getSelectedItems().get(0).getValue());
     }
 
-    protected void createNewCompositeSnapshot() {
+    public void createNewCompositeSnapshot() {
         launchTabForNewCompositeSnapshot(browserSelectionModel.getSelectedItems().get(0).getValue(),
                 Collections.emptyList());
     }
 
-    /**
-     * Renames a node through the service and its underlying data provider.
-     * If there is a problem in the call to the remote service,
-     * the user is shown a suitable error dialog and the name of the node is restored.
-     */
-    protected void renameNode() {
-        TreeItem<Node> node = browserSelectionModel.getSelectedItems().get(0);
-        List<String> existingSiblingNodes =
-                node.getParent().getChildren().stream()
-                        .filter(item -> item.getValue().getNodeType().equals(node.getValue().getNodeType()))
-                        .map(item -> item.getValue().getName())
-                        .collect(Collectors.toList());
-        renameNode(node.getValue(), existingSiblingNodes);
-    }
-
-    protected void copyUniqueNodeIdToClipboard() {
+    private void copyUniqueNodeIdToClipboard() {
         Node node = browserSelectionModel.getSelectedItem().getValue();
         ClipboardContent content = new ClipboardContent();
         content.putString(node.getUniqueId());
@@ -686,19 +717,24 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
     }
 
     /**
-     * Renames the selected node. A check is made to ensure that user cannot specify a name
-     * that is the same as any of its sibling nodes if they are of the same {@link Node} type.
-     *
-     * @param node                 The node to rename
-     * @param existingSiblingNodes List of sibling nodes
+     * Renames a node through the service and its underlying data provider.
+     * If there is a problem in the call to the remote service,
+     * the user is shown a suitable error dialog and the name of the node is restored.
      */
-    public void renameNode(Node node, List<String> existingSiblingNodes) {
+    private void renameNode() {
+        TreeItem<Node> node = browserSelectionModel.getSelectedItems().get(0);
+        List<String> existingSiblingNodes =
+                node.getParent().getChildren().stream()
+                        .filter(item -> item.getValue().getNodeType().equals(node.getValue().getNodeType()))
+                        .map(item -> item.getValue().getName())
+                        .toList();
+
         TextInputDialog dialog = new TextInputDialog();
         dialog.setTitle(Messages.promptRenameNodeTitle);
         dialog.setContentText(Messages.promptRenameNodeContent);
         dialog.setHeaderText(null);
         dialog.getDialogPane().lookupButton(ButtonType.OK).setDisable(true);
-        dialog.getEditor().textProperty().setValue(node.getName());
+        dialog.getEditor().textProperty().setValue(node.getValue().getName());
 
         dialog.getEditor().textProperty().addListener((observable, oldValue, newValue) -> {
             String value = newValue.trim();
@@ -709,15 +745,15 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
         Optional<String> result = dialog.showAndWait();
 
         if (result.isPresent()) {
-            node.setName(result.get());
+            node.getValue().setName(result.get());
             try {
-                saveAndRestoreService.updateNode(node);
+                saveAndRestoreService.updateNode(node.getValue());
                 // Since a changed node name may push the node to a different location in the tree view,
                 // we need to locate it to keep it selected. The tree view will otherwise "select" the node
                 // at the previous position of the renamed node. This is standard JavaFX TreeView behavior
                 // where TreeItems are "recycled", and updated by the cell renderer.
                 Stack<Node> copiedStack = new Stack<>();
-                DirectoryUtilities.CreateLocationStringAndNodeStack(node, false).getValue().forEach(copiedStack::push);
+                DirectoryUtilities.CreateLocationStringAndNodeStack(node.getValue(), false).getValue().forEach(copiedStack::push);
                 locateNode(copiedStack);
             } catch (Exception e) {
                 Alert alert = new Alert(AlertType.ERROR);
@@ -734,7 +770,7 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
      * @param node The {@link Node} object for the {@link TreeItem}.
      * @return The new {@link TreeItem}.
      */
-    protected TreeItem<Node> createTreeItem(final Node node) {
+    private TreeItem<Node> createTreeItem(final Node node) {
         return new TreeItem<>(node) {
             @Override
             public boolean isLeaf() {
@@ -757,12 +793,12 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
         }
         nodeSubjectToUpdate.setValue(node);
         // Folder and configuration node changes may include structure changes, so expand to force update.
-        if(nodeSubjectToUpdate.isExpanded() && (nodeSubjectToUpdate.getValue().getNodeType().equals(NodeType.FOLDER) ||
-                    nodeSubjectToUpdate.getValue().getNodeType().equals(NodeType.CONFIGURATION))){
-                if (nodeSubjectToUpdate.getParent() != null) { // null means root folder as it has no parent
-                    nodeSubjectToUpdate.getParent().getChildren().sort(treeNodeComparator);
-                }
-                expandTreeNode(nodeSubjectToUpdate);
+        if (nodeSubjectToUpdate.isExpanded() && (nodeSubjectToUpdate.getValue().getNodeType().equals(NodeType.FOLDER) ||
+                nodeSubjectToUpdate.getValue().getNodeType().equals(NodeType.CONFIGURATION))) {
+            if (nodeSubjectToUpdate.getParent() != null) { // null means root folder as it has no parent
+                nodeSubjectToUpdate.getParent().getChildren().sort(treeNodeComparator);
+            }
+            expandTreeNode(nodeSubjectToUpdate);
         }
     }
 
@@ -805,7 +841,7 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
     public void locateNode(Stack<Node> nodeStack) {
         TreeItem<Node> parentTreeItem = treeView.getRoot();
 
-        while (nodeStack.size() > 0) {
+        while (!nodeStack.isEmpty()) {
             Node currentNode = nodeStack.pop();
             TreeItem<Node> currentTreeItem = recursiveSearch(currentNode.getUniqueId(), parentTreeItem);
             expandTreeNode(currentTreeItem);
@@ -893,54 +929,13 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
     }
 
     /**
-     * Imports a configuration to a folder {@link Node} from file.
+     * Imports configuration or snapshot from CSV.
      */
-    protected void importConfiguration() {
+    private void importFromCSV() {
         Node node = browserSelectionModel.getSelectedItems().get(0).getValue();
         try {
             FileChooser fileChooser = new FileChooser();
-            fileChooser.setTitle(Messages.importConfigurationLabel);
-            fileChooser.getExtensionFilters().add(new FileChooser.ExtensionFilter("Supported file formats (CSV, SNP)", "*.csv", "*.bms"));
-            File file = fileChooser.showOpenDialog(splitPane.getScene().getWindow());
-            if (file != null) {
-                CSVImporter.importFile(node, file);
-            }
-        } catch (Exception e) {
-            LOG.log(Level.WARNING, "CSV import failed", e);
-        }
-    }
-
-    /**
-     * Exports a configuration to file.
-     */
-    protected void exportConfiguration() {
-        Node node = browserSelectionModel.getSelectedItems().get(0).getValue();
-        try {
-            FileChooser fileChooser = new FileChooser();
-            fileChooser.setTitle(Messages.exportConfigurationLabel);
-            fileChooser.getExtensionFilters().add(new FileChooser.ExtensionFilter("CSV (BMS compatible)", "*.csv"));
-            fileChooser.setInitialFileName(browserSelectionModel.getSelectedItems().get(0).getValue().getName());
-            File file = fileChooser.showSaveDialog(splitPane.getScene().getWindow());
-            if (file != null) {
-                if (!file.getAbsolutePath().toLowerCase().endsWith("csv")) {
-                    file = new File(file.getAbsolutePath() + ".csv");
-                }
-
-                CSVExporter.export(node, file.getAbsolutePath());
-            }
-        } catch (Exception e) {
-            LOG.log(Level.WARNING, "Configuration export failed", e);
-        }
-    }
-
-    /**
-     * Imports a snapshot from file to a configuration. Contents must match the PV list of the selected configuration.
-     */
-    protected void importSnapshot() {
-        Node node = browserSelectionModel.getSelectedItems().get(0).getValue();
-        try {
-            FileChooser fileChooser = new FileChooser();
-            fileChooser.setTitle(Messages.importSnapshotLabel);
+            fileChooser.setTitle(node.getNodeType().equals(NodeType.FOLDER) ? Messages.importConfigurationLabel : Messages.importSnapshotLabel);
             fileChooser.getExtensionFilters().add(new FileChooser.ExtensionFilter("Supported file formats (CSV, SNP)", "*.csv", "*.snp"));
             File file = fileChooser.showOpenDialog(splitPane.getScene().getWindow());
             if (file != null) {
@@ -952,23 +947,18 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
     }
 
     /**
-     * Exports a snapshot to file from selected snapshot node.
+     * Exports configuration or snapshot to CSV.
      */
-    protected void exportSnapshot() {
-        exportSnapshot(browserSelectionModel.getSelectedItems().get(0).getValue());
-    }
-
-    /**
-     * Exports the specified snapshot node
-     *
-     * @param node The snapshot {@link Node} to export.
-     */
-    public void exportSnapshot(Node node) {
+    private void exportToCSV() {
+        Node node = browserSelectionModel.getSelectedItems().get(0).getValue();
         try {
             FileChooser fileChooser = new FileChooser();
-            fileChooser.setTitle(Messages.exportSnapshotLabel);
-            fileChooser.getExtensionFilters().add(new FileChooser.ExtensionFilter("CSV (SNP compatible)", "*.csv"));
-            fileChooser.setInitialFileName(browserSelectionModel.getSelectedItems().get(0).getValue().getName());
+            fileChooser.setTitle(node.getNodeType().equals(NodeType.FOLDER) ? Messages.exportConfigurationLabel : Messages.exportSnapshotLabel);
+            String extensionFilterDesc = node.getNodeType().equals(NodeType.CONFIGURATION) ?
+                    "CSV (BMS compatible)" :
+                    "CSV (SNP compatible)";
+            fileChooser.getExtensionFilters().add(new FileChooser.ExtensionFilter(extensionFilterDesc, "*.csv"));
+            fileChooser.setInitialFileName(node.getName());
             File file = fileChooser.showSaveDialog(splitPane.getScene().getWindow());
             if (file != null) {
                 if (!file.getAbsolutePath().toLowerCase().endsWith("csv")) {
@@ -995,39 +985,17 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
     }
 
     /**
-     * Configures the "tag with comment" sub-menu. Items are added based on existing {@link Tag}s on the
+     * Configures the "tag" sub-menu. Items are added based on existing {@link Tag}s on the
      * selected {@link Node}s
      *
-     * @param tagWithCommentMenu The {@link Menu} subject to configuration.
+     * @param tagMenu The {@link Menu} subject to configuration.
      */
-    public void tagWithComment(final Menu tagWithCommentMenu) {
+    public void configureTagContextMenu(final Menu tagMenu) {
 
         List<Node> selectedNodes =
                 browserSelectionModel.getSelectedItems().stream().map(TreeItem::getValue).collect(Collectors.toList());
-
-        TagUtil.tagWithComment(tagWithCommentMenu, selectedNodes, updatedNodes -> updatedNodes.forEach(this::nodeChanged));
+        TagUtil.tag(tagMenu, selectedNodes, updatedNodes -> updatedNodes.forEach(this::nodeChanged));
     }
-
-    /**
-     * Configures the "tag as golden" menu item. Depending on the occurrence of the golden {@link Tag} on the
-     * selected {@link Node}s, the logic goes as:
-     * <ul>
-     *     <li>If all selected {@link Node}s have been tagged as golden, the item will offer possibility to remove
-     *     the tag on all {@link Node}s.</li>
-     *     <li>If none of the selected {@link Node}s have been tagged as golden, the item will offer possibility
-     *     to add the tag on all {@link Node}s.</li>
-     *     <li>If some - but not all - of the selected {@link Node}s have been tagged as golden, the item is disabled.</li>
-     * </ul>
-     *
-     * @param menuItem The {@link MenuItem} subject to configuration.
-     * @return <code>false</code> if the menu item should be disabled.
-     */
-    public boolean configureGoldenItem(MenuItem menuItem) {
-        List<Node> selectedNodes =
-                browserSelectionModel.getSelectedItems().stream().map(TreeItem::getValue).collect(Collectors.toList());
-        return TagUtil.configureGoldenItem(selectedNodes, menuItem);
-    }
-
 
     /**
      * Performs check of selection to determine if all selected nodes are of same type.
@@ -1087,7 +1055,7 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
      * @param nodes          List of {@link Node}s that were moved.
      */
     private void addMovedNodes(TreeItem<Node> parentTreeItem, List<Node> nodes) {
-        parentTreeItem.getChildren().addAll(nodes.stream().map(this::createTreeItem).collect(Collectors.toList()));
+        parentTreeItem.getChildren().addAll(nodes.stream().map(this::createTreeItem).toList());
         parentTreeItem.getChildren().sort(treeNodeComparator);
         TreeItem<Node> nextItemToExpand = parentTreeItem;
         while (nextItemToExpand != null) {
@@ -1120,35 +1088,47 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
     }
 
     /**
-     * Launches the save and restore app and highlights/loads the "resource" (configuration or snapshot) identified
-     * by the {@link URI}. If the configuration/snapshot in question cannot be found, an error dialog is shown.
+     * Parses the {@link URI} to determine what to do. Supported actions/behavior:
+     * <ul>
+     *     <li>Open a {@link Node}, which must not be of {@link NodeType#FOLDER}.</li>
+     *     <li>Launch the search/filter view to show a filter search result.</li>
+     * </ul>
      *
-     * @param uri An {@link URI} on the form file:/unique-id?app=saveandrestore, where unique-id is the
-     *            unique id of a configuration or snapshot.
+     * @param uri An {@link URI} on the form file:/unique-id?action=[open-node|open-filter]&app=saveandrestore, where unique-id is the
+     *            unique id of a {@link Node} or the unique id (name) of a {@link Filter}. If action is not sepcified,
+     *            it defaults to open-node.
      */
     public void openResource(URI uri) {
+
         if (uri == null) {
             return;
         }
-        String nodeId = uri.getPath().substring(1);
-        Node node = saveAndRestoreService.getNode(nodeId);
-        if (node == null) {
-            // Show error dialog.
-            Alert alert = new Alert(AlertType.ERROR);
-            alert.setTitle(Messages.openResourceFailedTitle);
-            alert.setHeaderText(MessageFormat.format(Messages.openResourceFailedHeader, nodeId));
-            DialogHelper.positionDialog(alert, treeView, -200, -200);
-            alert.show();
+        String query = uri.getQuery();
+        if (query == null || query.isEmpty()) {
+            logger.log(Level.WARNING, "Called with empty URI");
             return;
         }
-        Stack<Node> copiedStack = new Stack<>();
-        DirectoryUtilities.CreateLocationStringAndNodeStack(node, false).getValue().forEach(copiedStack::push);
-        locateNode(copiedStack);
-        nodeDoubleClicked(node);
-    }
+        String[] queries = query.split("&");
+        String action = OpenNodeAction.OPEN_SAR_NODE;
+        Optional<String> actionQuery = Arrays.stream(queries).filter(q -> q.startsWith("action=")).findFirst();
+        if (actionQuery.isEmpty()) {
+            logger.log(Level.WARNING, "Open resource does not specify action, defaulting to '" + action + "'");
+        } else if (actionQuery.get().substring("action=".length()).isEmpty()) {
+            logger.log(Level.WARNING, "Empty action specified, defaulting to '" + action + "'");
+        } else {
+            action = actionQuery.get().substring("action=".length());
+        }
 
-    public void findSnapshotReferences() {
-        // TODO: implement this as a search request and use search result UI to display result.
+        switch (action) {
+            case OpenNodeAction.OPEN_SAR_NODE:
+                openNode(uri.getPath().substring(1));
+                break;
+            case OpenFilterAction.OPEN_SAR_FILTER:
+                openSearchWindowForFilter(URLDecoder.decode(uri.getPath().substring(1), StandardCharsets.UTF_8));
+                break;
+            default:
+                logger.log(Level.WARNING, "Action '" + action + "' not supported");
+        }
     }
 
     /**
@@ -1176,7 +1156,14 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
     private void loadFilters() {
         try {
             List<Filter> filters = saveAndRestoreService.getAllFilters();
-            Platform.runLater(() -> filtersList.setAll(filters));
+            Platform.runLater(() -> {
+                filtersList.setAll(filters);
+                String savedFilterName = getSavedFilterName();
+                if (savedFilterName != null) {
+                    Optional<Filter> f = filtersComboBox.getItems().stream().filter(filter -> filter.getName().equals(savedFilterName)).findFirst();
+                    f.ifPresent(filter -> filtersComboBox.getSelectionModel().select(filter));
+                }
+            });
         } catch (Exception e) {
             LOG.log(Level.SEVERE, "Failed to load filters", e);
         }
@@ -1226,8 +1213,7 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
      */
     public Node[] getConfigAndSnapshotForActiveSnapshotTab() {
         Tab selectedTab = tabPane.getSelectionModel().getSelectedItem();
-        if (selectedTab instanceof SnapshotTab) {
-            SnapshotTab snapshotTab = (SnapshotTab) selectedTab;
+        if (selectedTab instanceof SnapshotTab snapshotTab) {
             return new Node[]{snapshotTab.getConfigNode(), snapshotTab.getSnapshotNode()};
         }
         return null;
@@ -1262,7 +1248,7 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
         }
     }
 
-    public void copySelectionToClipboard() {
+    private void copySelectionToClipboard() {
         List<TreeItem<Node>> selectedItems = browserSelectionModel.getSelectedItems();
         List<Node> selectedNodes = selectedItems.stream().map(TreeItem::getValue).collect(Collectors.toList());
         ClipboardContent clipboardContent = new ClipboardContent();
@@ -1284,12 +1270,12 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
         if (userIdentity.isNull().get()) {
             return false;
         }
-        List<Node> selectedNodes = browserSelectionModel.getSelectedItems().stream().map(TreeItem::getValue).collect(Collectors.toList());
+        List<Node> selectedNodes = browserSelectionModel.getSelectedItems().stream().map(TreeItem::getValue).toList();
         if (selectedNodes.size() == 1) {
             return true;
         }
         NodeType nodeTypeOfFirst = selectedNodes.get(0).getNodeType();
-        if (selectedNodes.stream().filter(n -> !n.getNodeType().equals(nodeTypeOfFirst)).findFirst().isPresent()) {
+        if (selectedNodes.stream().anyMatch(n -> !n.getNodeType().equals(nodeTypeOfFirst))) {
             return false;
         }
         TreeItem<Node> parentOfFirst = browserSelectionModel.getSelectedItems().get(0).getParent();
@@ -1322,13 +1308,10 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
         if ((nodeTypeOfFirst.equals(NodeType.COMPOSITE_SNAPSHOT) ||
                 nodeTypeOfFirst.equals(NodeType.CONFIGURATION)) && !nodeTypeOfTarget.equals(NodeType.FOLDER)) {
             return false;
-        } else if (nodeTypeOfFirst.equals(NodeType.SNAPSHOT) && !nodeTypeOfTarget.equals(NodeType.CONFIGURATION)) {
-            return false;
-        }
-        return true;
+        } else return !nodeTypeOfFirst.equals(NodeType.SNAPSHOT) || nodeTypeOfTarget.equals(NodeType.CONFIGURATION);
     }
 
-    public void pasteFromClipboard() {
+    private void pasteFromClipboard() {
         disabledUi.set(true);
         Object selectedNodes = Clipboard.getSystemClipboard().getContent(SaveAndRestoreApplication.NODE_SELECTION_FORMAT);
         if (selectedNodes == null || browserSelectionModel.getSelectedItems().size() != 1) {
@@ -1375,25 +1358,7 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
     }
 
     /**
-     * @return <code>true</code> selection contains multiple {@link Node}s, otherwise <code>false</code>.
-     */
-    public boolean multipleNodesSelected() {
-        return browserSelectionModel.getSelectedItems().size() > 1;
-    }
-
-    /**
-     * Checks if selection is not allowed, i.e. not all selected nodes are snapshot nodes.
-     *
-     * @return <code>false</code> if any of the selected nodes is of type {@link NodeType#FOLDER} or
-     * {@link NodeType#CONFIGURATION}. Since these {@link NodeType}s cannot be tagged.
-     */
-    public boolean checkTaggable() {
-        return browserSelectionModel.getSelectedItems().stream().filter(i -> i.getValue().getNodeType().equals(NodeType.FOLDER) ||
-                i.getValue().getNodeType().equals(NodeType.CONFIGURATION)).findFirst().isEmpty();
-    }
-
-    /**
-     * Determines if comparing snapshots is possible, which is the case if all of the following holds true:
+     * Determines if comparing snapshots is possible, which is the case if all the following holds true:
      * <ul>
      *     <li>The active tab must be a {@link org.phoebus.applications.saveandrestore.ui.snapshot.SnapshotTab}</li>
      *     <li>The active {@link org.phoebus.applications.saveandrestore.ui.snapshot.SnapshotTab} must not show an unsaved snapshot.</li>
@@ -1418,8 +1383,150 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
     @Override
     public void secureStoreChanged(List<ScopedAuthenticationToken> validTokens) {
         super.secureStoreChanged(validTokens);
-        tabPane.getTabs().forEach(t -> {
-            ((SaveAndRestoreTab) t).secureStoreChanged(validTokens);
+        tabPane.getTabs().forEach(t -> ((SaveAndRestoreTab) t).secureStoreChanged(validTokens));
+    }
+
+    private void openNode(String nodeId) {
+        JobManager.schedule("Open save-and-restore node", monitor -> {
+            try {
+                if (!treeInitializationCountDownLatch.await(30000, TimeUnit.SECONDS)) {
+                    return;
+                }
+            } catch (InterruptedException e) {
+                logger.log(Level.WARNING, "Failed to await tree view to load", e);
+                return;
+            }
+            Node node = saveAndRestoreService.getNode(nodeId);
+            if (node == null) {
+                Platform.runLater(() -> {
+                    // Show error dialog.
+                    Alert alert = new Alert(AlertType.ERROR);
+                    alert.setTitle(Messages.openResourceFailedTitle);
+                    alert.setHeaderText(MessageFormat.format(Messages.openResourceFailedHeader, nodeId));
+                    DialogHelper.positionDialog(alert, treeView, -200, -200);
+                    alert.show();
+                });
+                return;
+            }
+            if (node.getNodeType().equals(NodeType.FOLDER)) {
+                logger.log(Level.WARNING, "Requested to open node, but node must not be folder node");
+                return;
+            }
+            Stack<Node> copiedStack = new Stack<>();
+            DirectoryUtilities.CreateLocationStringAndNodeStack(node, false).getValue().forEach(copiedStack::push);
+            Platform.runLater(() -> {
+                locateNode(copiedStack);
+                nodeDoubleClicked(node);
+            });
         });
+    }
+
+    List<MenuItem> menuItems = Arrays.asList(
+            new LoginMenuItem(this, selectedItemsProperty,
+                    () -> ApplicationService.createInstance("credentials_management")),
+            new NewFolderMenuItem(this, selectedItemsProperty,
+                    () -> createNewFolder()),
+            new NewConfigurationMenuItem(this, selectedItemsProperty,
+                    () -> createNewConfiguration()),
+            new CreateSnapshotMenuItem(this, selectedItemsProperty,
+                    () -> openConfigurationForSnapshot()),
+            new NewCompositeSnapshotMenuItem(this, selectedItemsProperty,
+                    () -> createNewCompositeSnapshot()),
+            new SeparatorMenuItem(),
+            new EditCompositeMenuItem(this, selectedItemsProperty, () -> editCompositeSnapshot()),
+            new RenameFolderMenuItem(this, selectedItemsProperty, () -> renameNode()),
+            new CopyMenuItem(this, selectedItemsProperty, () -> copySelectionToClipboard()),
+            new PasteMenuItem(this, selectedItemsProperty, () -> pasteFromClipboard()),
+            new DeleteNodeMenuItem(this, selectedItemsProperty, () -> deleteNodes()),
+            new SeparatorMenuItem(),
+            new CompareSnapshotsMenuItem(this, selectedItemsProperty, () -> compareSnapshot()),
+            new TagGoldenMenuItem(this, selectedItemsProperty),
+            tagWithComment,
+            new SeparatorMenuItem(),
+            new CopyUniqueIdToClipboardMenuItem(this, selectedItemsProperty,
+                    () -> copyUniqueNodeIdToClipboard()),
+            new SeparatorMenuItem(),
+            new ImportFromCSVMenuItem(this, selectedItemsProperty, () -> importFromCSV()),
+            new ExportToCSVMenuItem(this, selectedItemsProperty, () -> exportToCSV())
+    );
+
+    /**
+     * Called when user requests context menu. Updates the {@link #selectedItemsProperty}, and since
+     * all {@link org.phoebus.applications.saveandrestore.ui.contextmenu.SaveAndRestoreMenuItem}s listen
+     * to changes to this property, they will update themselves based on the user selection.
+     *
+     * @param e A {@link ContextMenuEvent}
+     */
+    @SuppressWarnings("unused")
+    @FXML
+    public void configureContextMenu(ContextMenuEvent e) {
+        ObservableList<? extends TreeItem<Node>> selectedItems = browserSelectionModel.getSelectedItems();
+        selectedItemsProperty.setAll(selectedItems.stream().map(TreeItem::getValue).toList());
+
+        contextMenu.getItems().clear();
+        contextMenu.getItems().addAll(menuItems);
+
+        // If logbook has been configured, add the Create Log menu item
+        if(LogbookPreferences.is_supported){
+            contextMenu.getItems().add(new SeparatorMenuItem());
+            SelectionService.getInstance().setSelection(SaveAndRestoreApplication.NAME,
+                    selectedItemsProperty.size() == 1 ? List.of(selectedItemsProperty.get(0)) : Collections.emptyList());
+            List<ContextMenuEntry> supported = ContextMenuService.getInstance().listSupportedContextMenuEntries();
+
+            supported.forEach(action -> {
+                MenuItem menuItem = new MenuItem(action.getName(), new ImageView(action.getIcon()));
+                menuItem.setOnAction((ee) -> {
+                    try {
+                        action.call(null, SelectionService.getInstance().getSelection());
+                    } catch (Exception ex) {
+                        logger.log(Level.WARNING, "Failed to execute " + action.getName() + " from save&restore", ex);
+                    }
+                });
+                contextMenu.getItems().add(menuItem);
+            });
+        }
+
+        snapshotOrCompositeSnapshotOnlySelection.set(selectedItems.stream().filter(t ->
+                !t.getValue().getNodeType().equals(NodeType.SNAPSHOT) &&
+                        !t.getValue().getNodeType().equals(NodeType.COMPOSITE_SNAPSHOT)).findFirst().isEmpty());
+        tagWithComment.disableProperty().set(userIdentity.isNull().get() ||
+                selectedItemsProperty.size() != 1 ||
+                (!selectedItemsProperty.get(0).getNodeType().equals(NodeType.SNAPSHOT) &&
+                        !selectedItemsProperty.get(0).getNodeType().equals(NodeType.COMPOSITE_SNAPSHOT)));
+        configureTagContextMenu(tagWithComment);
+
+
+    }
+
+    /**
+     * Adds a tag to the {@link Node}s contained in <code>tagData</code>
+     *
+     * @param tagData Data object consumed by service
+     */
+    public void addTag(TagData tagData) {
+        try {
+            SaveAndRestoreService.getInstance().addTag(tagData);
+        } catch (Exception e) {
+            ExceptionDetailsErrorDialog.openError(Messages.errorGeneric,
+                    Messages.errorAddTagFailed,
+                    e);
+            Logger.getLogger(SaveAndRestoreController.class.getName()).log(Level.SEVERE, "Failed to add tag");
+        }
+    }
+
+    /**
+     * Removes a tag from the {@link Node}s contained in <code>tagData</code>
+     *
+     * @param tagData Data object consumed by service
+     */
+    public void deleteTag(TagData tagData) {
+        try {
+            SaveAndRestoreService.getInstance().deleteTag(tagData);
+        } catch (Exception e) {
+            ExceptionDetailsErrorDialog.openError(Messages.errorGeneric,
+                    Messages.errorDeleteTagFailed,
+                    e);
+            logger.log(Level.SEVERE, "Failed to delete tag");
+        }
     }
 }
